--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Dummy PWA",
     "short_name": "PWA",
     "description": "A dummy PWA for presentation purposes",
-    "start_url": "index.html",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#4CAF50",
