--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Dummy PWA",
-    "short_name": "PWA",
-    "description": "A dummy PWA for presentation purposes",
+    "name": "Barcode Scanner PWA",
+    "short_name": "Scanner PWA",
+    "description": "A PWA that scans barcodes and QR codes and allows you to search the scanned information on Google.",
     "start_url": "/index.html",
     "scope": "/",
     "display": "standalone",
@@ -9,12 +9,12 @@
     "theme_color": "#4CAF50",
     "icons": [
       {
-        "src": "icons/icon-192.png",
+        "src": "icons/icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "icons/icon-512.png",
+        "src": "icons/icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
